Clarify error message for QML type registration

Fixes: QTBUG-114966
Change-Id: I3451cf38841cbefe0fa8d7c07ce91da372f8d184
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>